--- a/젯슨 나노 세팅하기.md
+++ b/젯슨 나노 세팅하기.md
@@ -106,7 +106,7 @@
     
     이 부분까지 왔다면, 이제 젯슨 셋업이 필요합니다!
     
-![./JetsonNanoSetting/Untitled%    <p align="center">
+    <p align="center">
         <img src="./JetsonNanoSetting/Untitled%209.png" height="300">
     </p>
     
