Update 젯슨 나노 세팅하기.md

--- a/젯슨 나노 세팅하기.md
+++ b/젯슨 나노 세팅하기.md
@@ -102,7 +102,10 @@
     
     </aside>
     
-    ![Untitled](./JetsonNanoSetting/Untitled%208.png)
+    <p align="center">
+        <img src="./JetsonNanoSetting/Untitled%208.png" height="300">
+    </p>
+    
     
     이 부분까지 왔다면, 이제 젯슨 셋업이 필요합니다!
     
